Project upgrades   - Upgrade to Spring boot 3.0.0.M3.0.   - Upgrade to latest MapStruct.   - Upgrade to latest JDK 18.0.1.   - Upgrade to latest lombok.   - Upgrade javax namespace with Jakarta.